# business_needed_solutions

./: .gitignore  CLAUDE.md  MERGE_SUMMARY.md  MIGRATION_SUMMARY.md  PRINT_FORMAT_GUIDE.md  README.md  REFACTORING_SUMMARY.md  SECURITY_REVIEW.md  WIKI.md  diff.txt  license.txt  psychological_handbook.md  pyproject.toml  resolve_conflict.py  technical_handbook.md
business_needed_solutions/: hooks.py  migration.py  modules.txt  patches.txt  psychological_handbook.md  test_submission_restriction.py  update_vehicle.py
business_needed_solutions/bns_branch_accounting/: __init__.py  asset_remediation.py  billing_location.py  common_party_reconciliation.py  common_party_squareoff.py  gst_integration.py  migration.py  srbnb_reconciliation.py  test_common_party_reconciliation.py  test_common_party_squareoff.py  utils.py
business_needed_solutions/bns_internal_transfer/: __init__.py  utils.py
business_needed_solutions/business_needed_solutions/: __init__.py  auto_payment_reconcile.py  bulk_cancel.py  gl_sle_audit.py  migration.py  utils.py
business_needed_solutions/docs/: BACKDATED_STOCK_VALUATION_AND_GL_FLOW.md  PSYCHOLOGICAL_HANDBOOK.md  TECHNICAL_HANDBOOK.md  submission_restriction.md  warehouse_restriction.md
business_needed_solutions/fixtures/: bns_settings.json  client_script.json  custom_field.json  doctype.json  print_format.json  property_setter.json  terms_and_conditions.json
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/obsidian/: ._build_variance_map().md  (+2526 more)
scripts/: bns_security_scan.py  install_hooks.sh
(+180 files in other folders)
